# pyjama

./: .gitignore  LICENSE  Makefile  README.md  channel_models.py  channel_visualization.py  custom_pilots.py  jammer.py  jammer_simulation.py  new_loss.ipynb  pyproject.toml  requirements.txt  requirements_doc.txt  setup.py
doc/source/: conf.py
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/api/: channel_models.html  jammer.html  mitigation.html  (+5 more)
jammer/: channel_models.py  channel_visualization.py  interference.py  jammer.py  pilots.py  simulation_model.py  utils.py  visualization_utils.py
pyjama/: __init__.py  interference.py  jammer.py  pilots.py  simulation_model.py
simulations/: bler.ipynb  bug.py  constraint.ipynb  convert_to_csv.py  debug.py  debug_better.py  experimental_loss_comparison.ipynb  experimental_loss_designs.ipynb  experimental_losses.py  handcrafted.ipynb  hello.py  hello_model.py  losses copy.ipynb  losses.ipynb  mash.ipynb  multi_user.ipynb  nr_compliant_single_ue.ipynb  nr_compliant_single_ue_long_ds.ipynb  paper.ipynb  paper_data.ipynb  paper_time.ipynb  presentation.ipynb  presentation2.ipynb  presentation_graph_construction.ipynb  report.ipynb  report_graphs.ipynb  report_time.ipynb  show_weights.ipynb  test.ipynb  tests.py  train.py  train2.py  train_paper.py  train_parallel.py  train_report.py  training.ipynb  unmitigated.ipynb
tests/: covariance_test.ipynb  jammer_refactor_test.ipynb  pilots_experimental.py  sionna_test.ipynb  tests.md
(+41 files in other folders)
