[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjama"
authors = [
    {name = "Fabian Ulbricht", email = "fabianulbricht@web.de"},
    {name = "Gian Marti", email = "marti@iis.ee.ethz.ch"},
    {name = "Reinhard Wiesmayr", email = "wiesmayr@iis.ee.ethz.ch"}
]
description = "PyJama -- An open-source library based on Sionna nad TensorFlow for simulating jamming and anti-jamming techniques in wireless communication systems."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["jamming", "anti-jamming", "wireless", "sionna", "tensorflow", "machine learning"]
# TODO check dependencies
dependencies = [
    "numpy",
    "matplotlib",
    "tensorflow",
    "sionna"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "numpydoc==1.1.0",
    "sphinx==4.0.2",
    "sphinxcontrib-napoleon==0.7",
    "sphinx_rtd_theme==1.0.0",
    "nbsphinx==0.8.7",
    "docutils==0.16",
    "sphinx-copybutton==0.5.1",
    "markupsafe==2.1.5"
]

[project.urls]
Homepage = "http://pyjama.ethz.ch"
Documentation = "https://huoxiaoyao.github.io/pyjama/"
Repository = "https://github.com/huoxiaoyao/pyjama"
Issues = "https://github.com/huoxiaoyao/pyjama/issues"
